--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>Siddharth Personal Website</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <table>
     <tr>
-      <td> <img src="F:\web devlopment\HTML- PERSONAL SITE\WIN_20181116_14_23_23_Pro - Copy (3).jpg" alt="Siddharth Profile Pic"></td>
+      <td> <img src="WIN_20181116_14_23_23_Pro - Copy (3).jpg" alt="Siddharth Profile Pic"></td>
       <td>
         <h1>Siddharth Singh</h1>
         <p><i>Nobody yet</i></p>
@@ -33,7 +33,7 @@
     <li><a href="https://www.uefa.com/uefachampionsleague/">Watching UEFA Champions League</a></li>
     <li>Coding</li>
   </ol>
-  <h4><a href="F:\web devlopment\HTML- PERSONAL SITE\contact.html">Contact</a></h4>
+  <h4><a href="contact.html">Contact</a></h4>
   <hr>
   <h2>Carrer Highlights</h2>
   <table>
